Use this video as place holder for CLEO.mp4 till resized.

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <!-- Main section -->
         <div id="main_container" class="main_container">
             <video id='myvideo' width="85%" autoplay muted class="centerVid" style="padding-left: 10px" onended="nextScreen()">
-                <source  src="video/CLEO.mp4" type="video/mp4">
+                <source  src="video/CLEO_ALT_2_cubes_v8.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
