Updated to rounded video corners

--- a/index.html
+++ b/index.html
@@ -118,22 +118,23 @@
 <!--</div>-->
 <div id="container" class="container">
     <!--  left navigation -->
-
+    <div id="navigation" class="navigation">
+hello
+    </div>
     <!-- main container -->
     <div id="main" class="main">
         <!-- Main section -->
         <div id="main_container" class="main_container">
             <video id='myvideo' width="85%" autoplay muted class="centerVid" style="padding-left: 10px" onended="nextScreen()">
-                <source  src="video/CLEO_ALT_2_cubes_v8.mp4" type="video/mp4">
+                <source  src="video/Social_Economy.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
         <div id="second_screen" class="top_layer">
-            Display Info about cleo
-            <!--<h1 class="font_style">Coming In 2019</h1>-->
-            <!--<ul class="font_style" style="font-color: grey; clear: both">-->
-                <!--<li>A BETTER WAY TO GIVE</li>-->
-            <!--</ul>-->
+            <h1 class="font_style">Coming In 2019</h1>
+            <ul class="font_style" style="font-color: grey; clear: both">
+                <li>A BETTER WAY TO GIVE</li>
+            </ul>
             <p ></p>
         </div>
     </div>
