--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         }
         .main{
             width: auto;
-            height: 100%;
+            height: 96%;
             padding-top: 20px;
         }
         .main_container{
@@ -62,13 +62,37 @@
             position: absolute;
             top: 50%;
             left: 50%;
-            margin-left: 5px;
+            margin-left: 28px;
+            margin-right: 28px;
             transform: translate(-50%, -50%);
         }
+
         #myvideo{
             -moz-border-radius:25px;
             -webkit-border-radius:25px;
             border-radius:25px;
+        }
+        .header{
+            position: relative;
+            border-radius: 15px;
+            overflow: hidden;
+            /*border-top-right-radius: 15px;*/
+            width: 95%;
+            border: 1px blue solid;
+            height: 95%;
+            margin-top: 20px;
+            align-self: left;
+            /*background-color: black;*/
+        }
+        .tab{
+            /*width: 25%;*/
+            /*background-color: blue;*/
+            height: 150px;
+            float: left;
+        }
+        span {
+            display: inline-block;
+            vertical-align: baseline;
         }
         #header {
             opacity: 1;
@@ -85,13 +109,22 @@
             float: left;
         }
         .slogan {
+            display: inline-block;
+            vertical-align: bottom;
+            line-height: 150px;
+            width: 85%;
+            text-align: center;
+            margin-left: 5px;
             font-family: 'alteHaas', sans-serif;
-            font-size: 35px;
+            font-size: 30px;
             align-text: center;
             margin-left: 5px;
             color: #62BBE9;
         }
         .leadCharacter {
+            font-size: 75px;
+            font-weight: bold;
+            padding-right: 2px;
             color: #2A2A68;
         }
         #info{
@@ -108,7 +141,7 @@
             document.getElementById("second_screen").style.WebkitTransition = "all 4s"; // Code for Safari 3.1 to 6.0
             document.getElementById("second_screen").style.transition = "all 4s";
             document.getElementById("second_screen").style.width = "90%";
-            document.getElementById("second_screen").style.height = "90%";
+            document.getElementById("second_screen").style.height = "100%";
         }
     </script>
 </head>
@@ -119,6 +152,7 @@
 <div id="container" class="container">
     <!--  left navigation -->
     <div id="navigation" class="navigation">
+        nav links here
     </div>
     <!-- main container -->
     <div id="main" class="main">
@@ -130,13 +164,20 @@
             </video>
         </div>
         <div id="second_screen" class="top_layer">
-            <h1 class="font_style">Coming In 2019</h1>
-            <ul class="font_style" style="font-color: grey; clear: both">
+            <div class="header">
+                <div>
+                <div class="tab">
+                    <img src="images/ESFIhAbS_400x400.jpg" width="150px"></div>
+                <div class="tab slogan"> <span class="leadCharacter">C</span><span>HANGING</span> <span class="leadCharacter">L</span><span>IVES</span> <span  class="leadCharacter">E</span><span>VERY</span> <span  class="leadCharacter">O</span><span>PPORTUNITY</span>
+                </div>
+                </div>
+                <!-- <ul class="font_style" style="font-color: grey; clear: both">
                 <li>A BETTER WAY TO GIVE</li>
-            </ul>
-            <p ></p>
+            </ul>-->
+            </div>
         </div>
     </div>
+</div>
     <!--<div id="header">-->
         <!--<div id="logo">-->
             <!--<img src="images/ESFIhAbS_400x400.jpg" width="150px">-->
