added attrubute to autoplay on iphone

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             color: #62BBE9;
         }
         .leadCharacter {
-            font-size: 50px;
+            font-size: 30px;
             font-weight: bold;
             padding-right: 2px;
             color: #2A2A68;
@@ -172,7 +172,7 @@
     <div id="main" class="main">
         <!-- Main section -->
         <div id="main_container" class="main_container">
-            <video id='myvideo' width="85%" autoplay controls muted class="centerVid" style="padding-left: 10px" onended="nextScreen()">
+            <video id='myvideo' width="85%" autoplay playsinline controls muted class="centerVid" style="padding-left: 10px" onended="nextScreen()">
                 <source  src="video/Social_Economy.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
