--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
             align-self: left;
             /*background-color: black;*/
         }
+        .head{
+            width: 85%;
+            height: 150px;
+            display: inline-block;
+        }
         .tab{
             /*width: 25%;*/
             /*background-color: blue;*/
@@ -134,6 +139,9 @@
             margin-left: 10px;
             height: 390px;
         }
+        b{
+            color: #62BBE9;
+        }
         .bottom{
             display: inline-block;
             width: 98%;
@@ -179,10 +187,11 @@
         </div>
         <div id="second_screen" class="top_layer">
             <div class="header">
-                <div width="85%">
-                <div class="tab">
-                    <img src="images/ESFIhAbS_400x400.jpg" width="150px"></div>
-                <div class="tab slogan"> <span class="leadCharacter">C</span><span>HANGING</span> <span class="leadCharacter">L</span><span>IVES</span> <span  class="leadCharacter">E</span><span>VERY</span> <span  class="leadCharacter">O</span><span>PPORTUNITY</span>
+                <div class="head">
+                    <div class="tab">
+                        <img src="images/ESFIhAbS_400x400.jpg" width="150px"></div>
+                    <div class="tab slogan"> <span class="leadCharacter">C</span><span>HANGING</span> <span class="leadCharacter">L</span><span>IVES</span> <span  class="leadCharacter">E</span><span>VERY</span> <span  class="leadCharacter">O</span><span>PPORTUNITY</span>
+                    </div>
                 </div>
                 <div class="main_section">
                     <p>
@@ -190,13 +199,20 @@
                         <p>The CLEO Global foundation
                     is a non-profit organization, with the mission of personal empowerment, allowing people to live the life that they deserve.</p>
                     </p>
-                    </div>
+                    <p>The vision of the CLEO project is to develop and promote
+                        a sustainable social and economic cooperation by changing the way individuals interact and exchange
+                        goods and services. CLEO scope is to provide tools to mobilize social capital, and collaboration by bringing people together harnessing the power of blockchain technology. Doing so allows CLEO to create a new social fabric which promotes the use of new channels and new solutions. The CLEO Platform will overcome obstacles to innovation, education and funding, in a sustainable, scalable manner, to address the social and economic problems brought to light, giving more freedom to those affected by poverty, poor health and limited education and achieve sustainable change.</p>
+                   <p>The underlying belief behind Bitcoin founder Satoshi Nakamoto, is that the power of blockchain could decentralize the wealth of the world. It is this notion that pushes CLEO to build a foundation secured by the TRUSTLESS principle, favoring mathematical certainty over faith in validity by third party.</p>
+                    <p>In order for CLEO to accomplish this, it will create a philanthropic social platform that will be the focal point
+                        of the decentralized nature
+                        of cryptocurrency. This platform will provide the
+                        tools to reinforce individual stakeholders in the blockchain ecosystem by supporting local communities and providing a use case for buying and selling goods and services. As such, this ecosystem will be able to establish a Network of Trust.</p>
+                </div>
                 <div class="bottom"> Bottom </div>
                 <!-- <ul class="font_style" style="font-color: grey; clear: both">
                 <li>A BETTER WAY TO GIVE</li>
             </ul>-->
             </div>
-
         </div>
     </div>
 </div>
