added auto height resize

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         .header{
             position: relative;
             border-radius: 15px;
-            overflow: hidden;
+            overflow: auto;
             /*border-top-right-radius: 15px;*/
             width: 95%;
             border: 1px blue solid;
@@ -137,7 +137,7 @@
             width: 98%;
             font-family: 'alteHaas', sans-serif;
             margin-left: 10px;
-            height: 390px;
+            height: calc(90vh - 250px);
         }
         b{
             color: #62BBE9;
