image name correction

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <div class="nav_item"><img src="images/facebookCLEO.png" width="50px"></div>
         <div class="nav_item"><img src="images/telegramCLEO.png" width="50px"></div>
         <div class="nav_item"><img src="images/twitterCLEO.png" width="50px"></div>
-        <div class="nav_item"><img src="images/instagramCLEO.png" width="50px"></div>
+        <div class="nav_item"><img src="images/InstagramCLEO.png" width="50px"></div>
     </div>
     <!-- main container -->
     <div id="main" class="main">
