--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                         </ul>
                     </div>
                     <div class="bottom">
-                        <form>
+                        <form><br><br>
                             Get all the latest CLEO updates by signing up for CLEO News Letter
                             <input type="email" placeholder="email address" size="25" id="newsemail">
                             <input type="submit" value="Sign Me Up!">
