New MP4, email icon and links all social media.

--- a/index.html
+++ b/index.html
@@ -203,19 +203,21 @@
 <div id="container" class="container">
     <!--  left navigation -->
     <div id="navigation" class="navigation">
-        <div class="nav_item"><img src="images/facebookCLEO.png" width="50px"></div>
-        <div class="nav_item"><img src="images/telegramCLEO.png" width="50px"></div>
-        <div class="nav_item"><img src="images/twitterCLEO.png" width="50px"></div>
-        <div class="nav_item"><img src="images/InstagramCLEO.png" width="50px"></div>
+        <div class="nav_item"><a href="https://www.facebook.com/CleoGlobalFoundation/" target="_blank"><img src="images/facebookCLEO.png" width="50px"></a></div>
+        <div class="nav_item"><a href="https://t.me/cleoglobal"  target="_blank"><img src="images/telegramCLEO.png" width="50px"></a></div>
+        <div class="nav_item"><a href="https://twitter.com/CleoGlobal?s=09"  target="_blank"><img src="images/twitterCLEO.png" width="50px"></a></div>
+        <div class="nav_item"><a href="https://instagram.com/cleoglobal?utm_source=ig_profile_share&igshid=1efx5f53gotgn" target="_blank"><img src="images/InstagramCLEO.png" width="50px"></a></div>
+        <div class="nav_item"><a href="mailto:info@cleoglobal.org"><img src="images/emailCLEO.png" width="50px"></a></div>
     </div>
     <!-- main container -->
     <div id="main" class="main">
         <!-- Main section -->
         <div id="main_container" class="main_container">
             <video id='myvideo' width="85%" autoplay playsinline controls muted class="centerVid" style="padding-left: 10px" onended="nextScreen()">
-                <source  src="video/Social_Economy.mp4" type="video/mp4">
+                <source  src="video/CLEO2.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
+            <div><a href="#" onClick="nextScreen()" style="font-family: 'alteHaas', sans-serif;">Click Here to Skip Into</a></div>
         </div>
         <div id="second_screen" class="top_layer">
             <div class="header">
@@ -229,7 +231,7 @@
                     <img src="images/photo_2019-03-15_01-06-40.jpg" width="500px" align="right" style="padding-left: 5px; padding-top: 10px;">
                     <p>
                         <b>What is CLEO?</b><br>
-                        <p>The CLEO Global's mission is of personal empowerment, allowing people to live the life that they deserve.</p>
+                        <p>CLEO Global's mission is of personal empowerment, allowing people to live the life that they deserve.</p>
                     </p>
                     <p>The vision of the CLEO project is to develop and promote
                         a sustainable social and economic cooperation by changing the way individuals interact and exchange
@@ -270,7 +272,7 @@
                             <li>Event Planing</li>
                             <li>Promoting</li>
                         </ul>
-                    </div>
+                    </div><!--
                     <div class="bottom">
                         <form><br><br>
                             Get all the latest CLEO updates by signing up for CLEO News Letter
@@ -278,7 +280,7 @@
                             <input type="submit" value="Sign Me Up!">
                         </form>
 
-                    </div>
+                    </div>-->
                 </div>
                 <!-- <ul class="font_style" style="font-color: grey; clear: both">
                 <li>A BETTER WAY TO GIVE</li>
