--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             /*opacity:.50;*/
             width: 90%;
             height: 95%;
-            visibility: hidden;
+            visibility: visible;
         }
         .nav_item{
             width: 75px;
@@ -191,8 +191,8 @@
             // document.getElementById("second_screen").style.transition = "all 4s";
             // document.getElementById("second_screen").style.width = "90%";
             // document.getElementById("second_screen").style.height = "100%";
-            document.getElementById('main_container').style.visibility = 'hidden';
-            document.getElementById('second_screen').style.visibility = 'visible';
+            // document.getElementById('main_container').style.visibility = 'hidden';
+            // document.getElementById('second_screen').style.visibility = 'visible';
         }
     </script>
 </head>
@@ -212,13 +212,7 @@
     <!-- main container -->
     <div id="main" class="main">
         <!-- Main section -->
-        <div id="main_container" class="main_container">
-            <video id='myvideo' width="85%" autoplay playsinline controls muted class="centerVid" style="padding-left: 10px" onended="nextScreen()">
-                <source  src="video/CLEO2.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-            <div><a href="#" onClick="nextScreen()" style="font-family: 'alteHaas', sans-serif;">Click Here to Skip Into</a></div>
-        </div>
+
         <div id="second_screen" class="top_layer">
             <div class="header">
                 <div class="head">
@@ -227,8 +221,16 @@
                     <div class="tab slogan"> <span class="leadCharacter">C</span><span>HANGING</span> <span class="leadCharacter">L</span><span>IVES</span> <span  class="leadCharacter">E</span><span>VERY</span> <span  class="leadCharacter">O</span><span>PPORTUNITY</span>
                     </div>
                 </div>
-                <div class="main_section">
-                    <img src="images/photo_2019-03-15_01-06-40.jpg" width="500px" align="right" style="padding-left: 5px; padding-top: 10px;">
+
+                <div class="main_section" style="overflow-y: scroll">
+                    <div id="main_container" class="main_section" style="text-align: center; padding-bottom: 20px">
+                        <video id='myvideo' width="75%" autoplay playsinline controls loop muted class="centerVid" style="padding-left: 10px">
+                            <source  src="video/CLEO2.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                        <!-- <div><a href="#" onClick="nextScreen()" style="font-family: 'alteHaas', sans-serif;">Click Here to Skip Into</a></div>-->
+                    </div>
+
                     <p>
                         <b>What is CLEO?</b><br>
                         <p>CLEO Global's mission is of personal empowerment, allowing people to live the life that they deserve.</p>
