test big space issue on windows

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     </div>
                 </div>
 
-                <div class="main_section" style="overflow-y: scroll">
+                <div class="main_section" style="overflow-y: auto; background-color: pink">
                     <div id="main_container" class="main_section" style="text-align: center; padding-bottom: 20px">
                         <video id='myvideo' width="75%" autoplay playsinline controls loop muted class="centerVid" style="padding-left: 10px">
                             <source  src="video/CLEO2.mp4" type="video/mp4">
