fix spacing between video and text

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         }
         .main_section{
             display: inline-block;
-            width: 98%;
+            width: 95%;
             font-family: 'alteHaas', sans-serif;
             margin-left: 10px;
             overflow: auto;
@@ -223,7 +223,7 @@
                 </div>
 
                 <div class="main_section" style="overflow-y: auto;">
-                    <div id="main_container" class="main_section" style="text-align: center; padding-bottom: 20px; background-color: pink;">
+                    <div id="main_container" style="text-align: center; padding-bottom: 20px;">
                         <video id='myvideo' width="75%" autoplay playsinline controls loop muted class="centerVid" style="padding-left: 10px">
                             <source  src="video/CLEO2.mp4" type="video/mp4">
                             Your browser does not support the video tag.
