--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>CLEO Foundation</title>
     <style type="text/css">
+        body{
+            background-color: #EEEEf1;
+        }
         #background_container{
             background-image: url('images/ESFIhAbS_400x400.jpg');
             background-repeat: no-repeat;
@@ -54,7 +57,6 @@
         }
         .top_layer{
             display: flex;
-            background-color: white;
             justify-content: center;
             overflow: hidden;
             position: absolute;
